# proyecto1-offline

./: .dockerignore  .env  .env.example  .firebaserc  .gitignore  .mcp.json  CHANGELOG.md  Dockerfile  README.md  README_ADMIN.md  README_FIX.md  README_MIGRATION.md  TUTORIAL_STABILIZATION_REPORT.md  add_expense.py  backup.bat  build-android-bundled.ps1  build-android-fix.ps1  capacitor.config.json  check_all_recurring.py  check_businesses.py  check_db.py  check_recurring.py  cuaderno.db  docker-compose.yml  gastos.json  generate_test_sales.py  gunicorn.conf.py  index.html  iniciar.bat  migrate_to_postgres.py  package-lock.json  package.json  pyproject.toml  requirements.txt  server.py  start_backend.bat  start_frontend.bat  test_browser.html  test_business_switch.py  validate-tutorials.cjs  (+1 more)
.firebase/: hosting.cHVibGlj.cache
Backups/: backup_1_20260219_203139.json  backup_1_20260219_211334.json  backup_1_20260219_213602.json
android/: build.gradle  gradle.properties  variables.gradle
backend/: __init__.py  account_access.py  auth.py  config.py  database.py  demo_preview.py  main.py  membership.py  models.py  run_dev_server.py  runtime.py  seeds.py
docs/: backend_operations.md  login_real_scale_validation.md  staging_release_checklist.md
exports/: gastos_1_20260219_215234.xlsx  ventas_1_20260219_203113.xlsx  ventas_1_20260219_211326.xlsx  ventas_1_20260219_212528.xlsx  ventas_1_20260219_213552.xlsx  ventas_1_20260219_214346.xlsx  ventas_1_20260219_215229.xlsx  ventas_1_20260219_215513.xlsx  ventas_1_20260219_215518.xlsx  ventas_1_20260219_215529.xlsx  ventas_1_20260219_215912.xlsx  ventas_1_20260219_220105.xlsx  ventas_1_20260219_220114.xlsx  ventas_1_20260219_220420.xlsx  ventas_1_20260219_220629.xlsx
frontend-react/: .env.production  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
frontend-react/src-tauri/: Cargo.toml  tauri.conf.json
frontend-react/src-tauri/capabilities/: default.json
frontend-react/src-tauri/icons/: icon.icns
frontend-react/src-tauri/src/: main.rs
(+1035 files in other folders)
