[package]
name = "encaja_desktop"
version = "0.1.0"
description = "Contenedor desktop oficial de EnCaja sobre el frontend productivo."
authors = ["EnCaja"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

